refs : #18643 : Sort data and Handle Exception